# Calculadora_QT

./: CMakeLists.txt  README.md
src/: main.cpp
src/controllers/: CalculatorController.cpp  CalculatorController.h
src/models/: CalculatorModel.cpp  CalculatorModel.h
src/views/: BasicCalculatorView.cpp  BasicCalculatorView.h  MainWindow.cpp  MainWindow.h  ScientificCalculatorView.cpp  ScientificCalculatorView.h
